[gd_scene load_steps=9 format=3 uid="uid://v8r8ys1tc15y"]

[ext_resource type="PackedScene" uid="uid://g2mj11lpslje" path="res://ball.tscn" id="1_bgcyt"]
[ext_resource type="Script" path="res://main.gd" id="1_ryb73"]
[ext_resource type="PackedScene" uid="uid://bfubqtudkom6s" path="res://paddle.tscn" id="2_ce40c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rrg7l"]
size = Vector2(1011.03, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uq53f"]
size = Vector2(688, 18.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2w5jv"]
size = Vector2(570, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6q05h"]
size = Vector2(632, 320)

[sub_resource type="LabelSettings" id="LabelSettings_rqa22"]
font_size = 64

[node name="Main" type="Node"]
script = ExtResource("1_ryb73")
ball_speed_increment = 200

[node name="Arena" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Ball" parent="." instance=ExtResource("1_bgcyt")]
position = Vector2(305, 708)
wall_min_slide_angle = 0.0

[node name="Paddle" parent="." instance=ExtResource("2_ce40c")]
position = Vector2(320, 840)
leftInput = "left_input"
rightInput = "right_input"

[node name="Boundaries" type="StaticBody2D" parent="."]

[node name="RightWall" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(656, 504)
rotation = 1.5708
shape = SubResource("RectangleShape2D_rrg7l")

[node name="LeftWall" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(-8, 504)
rotation = 1.5708
shape = SubResource("RectangleShape2D_rrg7l")

[node name="Ceiling" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(328, -8)
shape = SubResource("RectangleShape2D_uq53f")

[node name="Lives" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Score" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_right = 0.5
offset_bottom = 23.0
grow_horizontal = 2
size_flags_horizontal = 4
horizontal_alignment = 2

[node name="KillZone" type="Area2D" parent="."]
position = Vector2(16, 1008)
scale = Vector2(1.2, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2(255, 16)
shape = SubResource("RectangleShape2D_2w5jv")

[node name="BrickArea" type="Area2D" parent="."]
position = Vector2(8, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BrickArea"]
position = Vector2(316, 160)
shape = SubResource("RectangleShape2D_6q05h")

[node name="Message" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -236.0
offset_top = -75.5
offset_right = 236.0
offset_bottom = 75.5
grow_horizontal = 2
grow_vertical = 2
text = "Game Over!"
label_settings = SubResource("LabelSettings_rqa22")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="collided" from="Ball" to="." method="_on_ball_collided"]
[connection signal="body_entered" from="KillZone" to="." method="_on_kill_zone_body_entered"]
